- updated the PgSQL README

--- a/Code/PgSQL/rdkit/README
+++ b/Code/PgSQL/rdkit/README
@@ -11,7 +11,7 @@ Installation:
 if PostgreSQL is installed in a location where CMake is unable to find it,
 either set the environment variable PostgreSQL_ROOT or add a
 "-DPostgreSQL_ROOT" switch to the cmake command line, pointing to the
-PostgreSQL root directory, e.g. C:\Program Files\PostgreSQL\9.5
+PostgreSQL root directory, e.g. C:\Program Files\PostgreSQL\9.6
 Under Linux, if you install PostgreSQL using the RHEL/CentOS RPMs provided by
 the PostgreSQL RPM Building Project
 (http://yum.postgresql.org/repopackages.php),
@@ -19,16 +19,16 @@ PostgreSQL lives under /usr/pgsql-9.x, and the
 include files are located under a path that the current FindPostgreSQL.cmake
 module is unable to find without a little help. Therefore, you will need to
 add a "-DPostgreSQL_TYPE_INCLUDE_DIR" switch pointing to the location of the
-"server" include directory. E.g., for PostgreSQL 9.5 the CMake PostgreSQL-
+"server" include directory. E.g., for PostgreSQL 9.6 the CMake PostgreSQL-
 related switches would be:
--DPostgreSQL_ROOT=/usr/pgsql-9.5
--DPostgreSQL_TYPE_INCLUDE_DIR=/usr/pgsql-9.5/include/server
+-DPostgreSQL_ROOT=/usr/pgsql-9.6
+-DPostgreSQL_TYPE_INCLUDE_DIR=/usr/pgsql-9.6/include/server
 
 After building the RDKit, carry out the following steps:
 1) Open a shell (CMD under Windows) with administrator privileges
 2) Stop the PostgreSQL service:
-   "C:\Program Files\PostgreSQL\9.5\bin\pg_ctl.exe" ^
-   -N "postgresql-9.5"  -D "C:\Program Files\PostgreSQL\9.5\data" ^
+   "C:\Program Files\PostgreSQL\9.6\bin\pg_ctl.exe" ^
+   -N "postgresql-9.6"  -D "C:\Program Files\PostgreSQL\9.6\data" ^
    -w stop (Windows)
    service postgresql stop (Linux)
    
@@ -37,23 +37,26 @@ After building the RDKit, carry out the following steps:
    ${CMAKE_BINARY_DIR}\Code\PgSQL\rdkit\pgsql_install.bat (Windows)
    sh ${CMAKE_BINARY_DIR}/Code/PgSQL/rdkit/pgsql_install.sh (Linux)
    
-   which will install rdkit.sql91.in, rdkit--3.4.sql,
-   rdkit.control and rdkit.dll into PostgreSQL 
+   which will install rdkit--3.5.sql, rdkit.control and rdkit.dll
+   into PostgreSQL 
 4) Under Windows, make sure that the Boost DLLs against which the RDKit
    is built are in the SYSTEM path, or PostgreSQL will fail to create the
    rdkit extension with a deceptive error message such as:
 
    ERROR:  could not load library
-   "C:/Program Files/PostgreSQL/9.5/lib/rdkit.dll":
+   "C:/Program Files/PostgreSQL/9.6/lib/rdkit.dll":
    The specified module could not be found.
    Under Linux, make sure to add to the .bashrc of the postgres user
    an "export LD_LIBRARY_PATH" directive pointing to any dynamic
    libraries that the postgresql service may need (e.g., Boost or
-   PostgreSQL libraries) which are not in the system ldconfig path
+   PostgreSQL libraries) which are not in the system ldconfig path.
+   Alternatively, in some PostgreSQL distributions you may add a
+   LD_LIBRARY_PATH = '/path/to/dynamic/libraries'
+   line to /etc/postgresql/9.6/main/environment
 
 5) Start the PostgreSQL service, e.g.:
-   "C:\Program Files\PostgreSQL\9.5\bin\pg_ctl.exe" ^
-   -N "postgresql-9.5"  -D "C:\Program Files\PostgreSQL\9.5\data" ^
+   "C:\Program Files\PostgreSQL\9.6\bin\pg_ctl.exe" ^
+   -N "postgresql-9.6"  -D "C:\Program Files\PostgreSQL\9.6\data" ^
    -w start (Windows)
    service postgresql start (Linux)
 
