Updated fingerprint generator notebook

--- a/Docs/Notebooks/FingerprintGenerators.ipynb
+++ b/Docs/Notebooks/FingerprintGenerators.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -134,19 +134,19 @@
     "\n",
     "print \"Atom pair\", non_zero\n",
     "\n",
-    "generator = rdFingerprintGenerator.GetMorganGenerator32(radius = 3)\n",
+    "generator = rdFingerprintGenerator.GetMorganGenerator(radius = 3)\n",
     "fingerprint = generator.GetFingerprint(mol)\n",
     "non_zero = fingerprint.GetNonzeroElements()\n",
     "\n",
     "print \"Morgan\", non_zero\n",
     "\n",
-    "generator = rdFingerprintGenerator.GetRDKitFPGenerator64()\n",
+    "generator = rdFingerprintGenerator.GetRDKitFPGenerator()\n",
     "fingerprint = generator.GetFingerprint(mol)\n",
     "non_zero = fingerprint.GetNonzeroElements()\n",
     "\n",
     "print \"RDKitFingerprint\", non_zero\n",
     "\n",
-    "generator = rdFingerprintGenerator.GetTopologicalTorsionGenerator64()\n",
+    "generator = rdFingerprintGenerator.GetTopologicalTorsionGenerator()\n",
     "fingerprint = generator.GetFingerprint(mol)\n",
     "non_zero = fingerprint.GetNonzeroElements()\n",
     "\n",
@@ -159,7 +159,159 @@
    "source": [
     "## Invariant generators\n",
     "\n",
-    "It is possible to use a custom invariant generators while creating fingerprints. Invariant generators provide values to be used as invariants for each atom or bond in the molecule and these values affect the "
+    "It is possible to use a custom invariant generators while creating fingerprints. Invariant generators provide values to be used as invariants for each atom or bond in the molecule and these values affect the generated fingerprint."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RDKitFingerprint {4275705116: 2, 1940446997: 1}\n",
+      "RDKitFingerprint {578931652: 1, 2298572045: 2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "simpleMol = Chem.MolFromSmiles('CCC')\n",
+    "\n",
+    "generator = rdFingerprintGenerator.GetRDKitFPGenerator()\n",
+    "fingerprint = generator.GetFingerprint(simpleMol)\n",
+    "non_zero = fingerprint.GetNonzeroElements()\n",
+    "\n",
+    "print \"RDKitFingerprint\", non_zero\n",
+    "\n",
+    "atomInvariantsGen = rdFingerprintGenerator.GetAtomPairAtomInvGen()\n",
+    "\n",
+    "generator = rdFingerprintGenerator.GetRDKitFPGenerator(atomInvariantsGenerator = atomInvariantsGen)\n",
+    "fingerprint = generator.GetFingerprint(simpleMol)\n",
+    "non_zero = fingerprint.GetNonzeroElements()\n",
+    "\n",
+    "print \"RDKitFingerprint\", non_zero"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Currently avaliable invariants generators are:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Morgan with AtomPairAtomInvGen {33: 2, 35: 1, 36: 1, 3205494725: 1, 2343097318: 1, 97: 3, 523835848: 1, 3205489706: 2, 3205489717: 1, 3205494778: 1, 618975071: 1}\n",
+      "Morgan with MorganAtomInvGen {1741045729: 1, 1542633699: 1, 2246728737: 2, 2245273601: 1, 3537123720: 1, 864662311: 3, 2927183216: 1, 2245277810: 1, 1542631284: 2, 2782665878: 1, 3537119515: 1}\n",
+      "Morgan with MorganFeatureAtomInvGen {0: 4, 3: 3, 3208860345: 1, 614176407: 1, 3205496825: 3, 792807483: 1, 3205495869: 2}\n",
+      "Morgan with RDKitAtomInvGen {12: 4, 2705297134: 1, 16: 3, 165450225: 1, 608338133: 1, 3205493174: 2, 3205492925: 3}\n",
+      "Morgan with MorganBondInvGen {1741045729: 1, 1542633699: 1, 2246728737: 2, 2245273601: 1, 3537123720: 1, 864662311: 3, 2927183216: 1, 2245277810: 1, 1542631284: 2, 2782665878: 1, 3537119515: 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "atomInvariantsGen = rdFingerprintGenerator.GetAtomPairAtomInvGen()\n",
+    "\n",
+    "generator = rdFingerprintGenerator.GetMorganGenerator(radius = 3, atomInvariantsGenerator = atomInvariantsGen)\n",
+    "fingerprint = generator.GetFingerprint(mol)\n",
+    "non_zero = fingerprint.GetNonzeroElements()\n",
+    "\n",
+    "print \"Morgan with AtomPairAtomInvGen\", non_zero\n",
+    "\n",
+    "atomInvariantsGen = rdFingerprintGenerator.GetMorganAtomInvGen()\n",
+    "\n",
+    "generator = rdFingerprintGenerator.GetMorganGenerator(radius = 3, atomInvariantsGenerator = atomInvariantsGen)\n",
+    "fingerprint = generator.GetFingerprint(mol)\n",
+    "non_zero = fingerprint.GetNonzeroElements()\n",
+    "\n",
+    "# Default for Morgan FP\n",
+    "print \"Morgan with MorganAtomInvGen\", non_zero\n",
+    "\n",
+    "atomInvariantsGen = rdFingerprintGenerator.GetMorganFeatureAtomInvGen()\n",
+    "\n",
+    "generator = rdFingerprintGenerator.GetMorganGenerator(radius = 3, atomInvariantsGenerator = atomInvariantsGen)\n",
+    "fingerprint = generator.GetFingerprint(mol)\n",
+    "non_zero = fingerprint.GetNonzeroElements()\n",
+    "\n",
+    "print \"Morgan with MorganFeatureAtomInvGen\", non_zero\n",
+    "\n",
+    "atomInvariantsGen = rdFingerprintGenerator.GetRDKitAtomInvGen()\n",
+    "\n",
+    "generator = rdFingerprintGenerator.GetMorganGenerator(radius = 3, atomInvariantsGenerator = atomInvariantsGen)\n",
+    "fingerprint = generator.GetFingerprint(mol)\n",
+    "non_zero = fingerprint.GetNonzeroElements()\n",
+    "\n",
+    "print \"Morgan with RDKitAtomInvGen\", non_zero\n",
+    "\n",
+    "bondInvariantsGen = rdFingerprintGenerator.GetMorganBondInvGen()\n",
+    "\n",
+    "generator = rdFingerprintGenerator.GetMorganGenerator(radius = 3, bondInvariantsGenerator = bondInvariantsGen)\n",
+    "fingerprint = generator.GetFingerprint(mol)\n",
+    "non_zero = fingerprint.GetNonzeroElements()\n",
+    "\n",
+    "# Default for Morgan FP\n",
+    "print \"Morgan with MorganBondInvGen\", non_zero"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Custom Invariants\n",
+    "\n",
+    "It is also possible to provide custom invariants instead of using a invariants generator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{558113: 2, 541730: 1}\n",
+      "{16417: 2, 16418: 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "generator = rdFingerprintGenerator.GetAtomPairGenerator()\n",
+    "fingerprint = generator.GetFingerprint(simpleMol)\n",
+    "non_zero = fingerprint.GetNonzeroElements()\n",
+    "\n",
+    "print non_zero\n",
+    "\n",
+    "customAtomInvariants = [1, 1, 1]\n",
+    "fingerprint = generator.GetFingerprint(simpleMol, customAtomInvariants = customAtomInvariants)\n",
+    "non_zero = fingerprint.GetNonzeroElements()\n",
+    "\n",
+    "print non_zero\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Convenience functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bulk fingerprint"
    ]
   }
  ],
